Update gitignore, update code considering Java 8